; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_vport.c_mlx5_query_min_inline.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_vport.c_mlx5_query_min_inline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { i32 }

@wqe_inline_mode = common dso_local global i32 0, align 4
@MLX5_INLINE_MODE_L2 = common dso_local global i32 0, align 4
@MLX5_INLINE_MODE_NONE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5_query_min_inline(%struct.mlx5_core_dev* %0, i32* %1) #0 {
  %3 = alloca %struct.mlx5_core_dev*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %3, align 8
  %7 = load i32, i32* @wqe_inline_mode, align 4
  %8 = call i32 @MLX5_CAP_ETH(%struct.mlx5_core_dev* %6, i32 %7)
  switch i32 %8, label %19 [
    i32 130, label %9
    i32 128, label %12
    i32 129, label %16
  ]

9:                                                ; preds = %2
  %10 = load i32, i32* @MLX5_INLINE_MODE_L2, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  store i32 0, i32* %5, align 4
  br label %22

12:                                               ; preds = %2
  %13 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @mlx5_query_nic_vport_min_inline(%struct.mlx5_core_dev* %13, i32 0, i32* %14)
  store i32 %15, i32* %5, align 4
  br label %22

16:                                               ; preds = %2
  %17 = load i32, i32* @MLX5_INLINE_MODE_NONE, align 4
  %18 = load i32*, i32** %4, align 8
  store i32 %17, i32* %18, align 4
  store i32 0, i32* %5, align 4
  br label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %19, %16, %12, %9
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @MLX5_CAP_ETH(%struct.mlx5_core_dev*, i32) #1

declare dso_local i32 @mlx5_query_nic_vport_min_inline(%struct.mlx5_core_dev*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
